added sidebar and part of the main part in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -66,6 +66,145 @@
                         </button>
                         <input class="search-bar" type="text" placeholder="Cerca o inizia una nuova chat">
                     </div>
+
+                    <!-- Sezione Chats -->
+                    <div class="list-chat-box">
+
+                        <!-- Prima Chat -->
+                        <div class="box-chat active">
+                            <div class="box-profile">
+                                <img src="img/avatar_Fred.jpg" alt="Fred Pic Chat">
+                                <div class="box-contact">
+                                    <div class="personal-name">Fred</div>
+                                    <div class="preview">Ultimo messaggio inviato</div>
+                                </div>
+                            </div>
+
+                            <div class="time-last-message">
+                                <div class="time">12:00</div>
+                            </div>
+                        </div>
+
+                        <!-- Seconda Chat -->
+                        <div class="box-chat">
+                            <div class="box-profile">
+                                <img src="img/avatar_Sonny.jpg" alt="Sonny Pic Chat">
+                                <div class="box-contact">
+                                    <div class="personal-name">Sonny</div>
+                                    <div class="preview">Ultimo messaggio inviato</div>
+                                </div>
+                            </div>
+
+                            <div class="time-last-message">
+                                <div class="time">12:00</div>
+                            </div>
+                        </div>
+
+                        <!-- Terza Chat -->
+                        <div class="box-chat">
+                            <div class="box-profile">
+                                <img src="img/avatar_Gerald.jpg" alt="Gerald Pic Chat">
+                                <div class="box-contact">
+                                    <div class="personal-name">G-Eazy</div>
+                                    <div class="preview">Ultimo messaggio inviato</div>
+                                </div>
+                            </div>
+
+                            <div class="time-last-message">
+                                <div class="time">12:00</div>
+                            </div>
+                        </div>
+
+                        <!-- Quarta Chat -->
+                        <div class="box-chat">
+                            <div class="box-profile">
+                                <img src="img/avatar_Selena.jpg" alt="Selena Pic Chat">
+                                <div class="box-contact">
+                                    <div class="personal-name">Selena ❤️</div>
+                                    <div class="preview">Ultimo messaggio inviato</div>
+                                </div>
+                            </div>
+
+                            <div class="time-last-message">
+                                <div class="time">12:00</div>
+                            </div>
+                        </div>
+
+                        <!-- Quinta Chat -->
+                        <div class="box-chat">
+                            <div class="box-profile">
+                                <img src="img/avatar_Garrix.jpg" alt="Garrix Pic Chat">
+                                <div class="box-contact">
+                                    <div class="personal-name">Garrix</div>
+                                    <div class="preview">Ultimo messaggio inviato</div>
+                                </div>
+                            </div>
+
+                            <div class="time-last-message">
+                                <div class="time">12:00</div>
+                            </div>
+                        </div>
+
+                        <!-- Sesta Chat -->
+                        <div class="box-chat">
+                            <div class="box-profile">
+                                <img src="img/avatar_Harlow.jpg" alt="Harlow Pic Chat">
+                                <div class="box-contact">
+                                    <div class="personal-name">Harlow</div>
+                                    <div class="preview">Ultimo messaggio inviato</div>
+                                </div>
+                            </div>
+
+                            <div class="time-last-message">
+                                <div class="time">12:00</div>
+                            </div>
+                        </div>
+
+                        <!-- Settima Chat -->
+                        <div class="box-chat">
+                            <div class="box-profile">
+                                <img src="img/avatar_Becky.jpg" alt="Becky Pic Chat">
+                                <div class="box-contact">
+                                    <div class="personal-name">Becky Hill</div>
+                                    <div class="preview">Ultimo messaggio inviato</div>
+                                </div>
+                            </div>
+
+                            <div class="time-last-message">
+                                <div class="time">12:00</div>
+                            </div>
+                        </div>
+
+                        <!-- Ottava Chat -->
+                        <div class="box-chat">
+                            <div class="box-profile">
+                                <img src="img/avatar_TheChainsmokers.jpg" alt="TheChainsmokers Pic Chat">
+                                <div class="box-contact">
+                                    <div class="personal-name">The Chainsmokers</div>
+                                    <div class="preview">Ultimo messaggio inviato</div>
+                                </div>
+                            </div>
+
+                            <div class="time-last-message">
+                                <div class="time">12:00</div>
+                            </div>
+                        </div>
+
+                        <!-- Nona Chat -->
+                        <div class="box-chat">
+                            <div class="box-profile">
+                                <img src="img/avatar_DuaLipa.jpg" alt="DuaLipa Pic Chat">
+                                <div class="box-contact">
+                                    <div class="personal-name">Dua Lipa</div>
+                                    <div class="preview">Ultimo messaggio inviato</div>
+                                </div>
+                            </div>
+
+                            <div class="time-last-message">
+                                <div class="time">12:00</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Sezione Main Content (Chat Attiva + Input Messaggio) -->
@@ -73,7 +212,7 @@
                     <div id="topbar">
                         <div class="box-profile">
                             <img src="img/avatar_Fred.jpg" alt="Active Profile Pic Chat">
-                            <div class="box contact">
+                            <div class="box-contact">
                                 <div class="personal-name">Fred</div>
                                 <div class="access">Ultimo accesso oggi alle 12:00</div>
                             </div>
@@ -87,11 +226,34 @@
                     </div>
 
                     <div id="main-part">
-
+                        <div class="row">
+                            <div class="col">
+                                <div class="user-messages">Tutto fatto!</div>
+                            </div>
+                            <div class="col">
+                                <div class="personal-messages">Hai portato a spasso il cane?</div>
+                                <div class="personal-messages">Ricordati di stendere i panni</div>
+                            </div>
+                        </div>
                     </div>
 
+                    <!-- Sezione Bottom Bar scrittura messaggio -->
                     <div id="bottom-bar">
-        
+                        <div class="left-section">
+                            <div class="emojis-button">
+                                <a href="#"><i class="fa-regular fa-face-smile"></i></a>
+                            </div>
+                        </div>
+
+                        <div class="middle-section">
+                            <input class="type-bar" type="text" placeholder="Scrivi un messaggio">
+                        </div>
+
+                        <div class="right-section">
+                            <div class="voice-button">
+                                <a href="#"><i class="fa-solid fa-microphone"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
