--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <div class="box-profile">
                                 <img src="img/avatar_Gerald.jpg" alt="Gerald Pic Chat">
                                 <div class="box-contact">
-                                    <div class="personal-name">G-Eazy</div>
+                                    <div class="personal-name">Gerald</div>
                                     <div class="preview">Ultimo messaggio inviato</div>
                                 </div>
                             </div>
@@ -120,7 +120,7 @@
                             <div class="box-profile">
                                 <img src="img/avatar_Selena.jpg" alt="Selena Pic Chat">
                                 <div class="box-contact">
-                                    <div class="personal-name">Selena ❤️</div>
+                                    <div class="personal-name">Selena</div>
                                     <div class="preview">Ultimo messaggio inviato</div>
                                 </div>
                             </div>
@@ -180,7 +180,7 @@
                             <div class="box-profile">
                                 <img src="img/avatar_TheChainsmokers.jpg" alt="TheChainsmokers Pic Chat">
                                 <div class="box-contact">
-                                    <div class="personal-name">The Chainsmokers</div>
+                                    <div class="personal-name">Andrew & Alex</div>
                                     <div class="preview">Ultimo messaggio inviato</div>
                                 </div>
                             </div>
@@ -225,6 +225,7 @@
                         </div>
                     </div>
 
+                    <!-- Sezione Centrale Chat Attiva -->
                     <div id="main-part">
                         <div class="chat outgoing">
                             <div class="message">Hai portato a spasso il cane?</div>
