--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="list-chat-box">
 
                             <!-- Ciclo For Chats -->
-                            <div v-for="(contact, i) in contacts" class="box-chat">
+                            <div v-for="(contact, i) in contacts" class="box-chat" @click="colorMsg(i)">
                                 <div class="box-profile">
                                     <img :src="contact.avatar" alt="Fred Pic Chat">
                                     <div class="box-contact">
@@ -108,7 +108,7 @@
 
                         <!-- Sezione Centrale Chat Attiva -->
                         <div id="main-part">
-                            <div v-for="(msg, i) in contacts[activeContact].messages" class="chat" :class="msg.status === true ? 'status': ''">
+                            <div v-for="(msg, i) in contacts[activeContact].messages" class="chat" :class="msg.status === 'sent' ? 'sent': 'received'">
                                 <div class="message">{{msg.message}}</div>
                             </div>
                         </div>
